ingress/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.org/rewrites: "serviceName=jenkins"
spec:
  rules:
    - http:
        paths:
          - path: /jenkins/
            backend:
              serviceName: jenkins
              servicePort: 8080
