ingress/webapp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /simplewebapp/
            backend:
              serviceName: simplewebapp
              servicePort: 8080
